# sparse_pretrain_release

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sparse_pretrain/: __init__.py  paths.py
sparse_pretrain/scripts/: __init__.py  ablate_core_crosstask.py  atom_excision.py  atomicity_test.py  build_cast_name_pool.py  compare_full_vs_circuit_pronoun.py  crosstask_ablation_check.py  crosstask_attn_vs_mlp_dla.py  dump_law_check.py  dump_law_check2.py  epistasis_test.py  exclude_kernel.py  family_clustering.py  iteration_jaccard.py  iteration_jaccard_all.py  mech_interp_core.py  metric_clustering_robustness.py  mlp_counterbalance.py  mlp_function.py  motif_dictionary.py  plot_crosstask_2afc.py  plot_family_clustering.py  plot_loss_trajectory.py  plot_most_universal_count.py  plot_motif_trajectory.py  plot_nmf_dictionary.py  plot_peel_trajectory.py  plot_success_rate.py  pronoun_split.py  recompute_2afc.py  run_carbs_clean.py  test_avalanche_model_all.py  universality_atom_peel.py  universality_motif_excision.py  universality_pruning_experiment.py  (+2 more)
tests/: conftest.py  test_analysis_scripts_cuda.py  test_atom_tools.py  test_avalanche_and_metrics.py  test_calibrate.py  test_discretize.py  test_family_clustering.py  test_heavy_mains.py  test_masked_model.py  test_model_components.py  test_model_sparsegpt.py  test_motif_dictionary.py  test_node_mask.py  test_paths.py  test_plot_scripts.py  test_pronoun_split.py  test_run_pruning_cli.py  test_smoke.py  test_src_config.py  test_tasks.py  test_trainer.py  test_universality_experiment.py
(+7 files in other folders)
