[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-pretrain"
version = "0.1.0"
description = "Circuit redundancy, universality, and necessity in dense and weight-sparse transformers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "huggingface-hub>=0.16.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Hyperparameter tuning for the pruning sweeps (scripts/run_carbs_clean.py).
# The default reproduction path uses fixed hyperparameters (--skip-carbs) and
# does not need this.
carbs = ["carbs @ git+https://github.com/imbue-ai/carbs.git"]
# Optional Weights & Biases logging during pruning (off by default).
wandb = ["wandb>=0.16.0"]

[tool.setuptools.packages.find]
include = ["sparse_pretrain*"]

[tool.setuptools.package-data]
sparse_pretrain = ["data/name_pools/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["sparse_pretrain"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
